...
        }}
      />
      <Tabs.Screen
        name="gear"
        options={{
          title: "Gear",
          tabBarAccessibilityLabel: "gear-tab",
          tabBarIcon: ({ focused }) =>
            focused ? (
              <GearActive width={24} height={24} />
            ) : (
              <GearInactive width={24} height={24} />
            ),
...
